force-app/main/default/objects/Use_Case__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Money-In</fullName>
            </value>
            <value>
                <fullName>Money-Out</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>EUC</fullName>
                <isActive>false</isActive>
                <label>EUC</label>
            </value>
            <value>
                <fullName>Third Party</fullName>
                <isActive>false</isActive>
                <label>Third Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>