force-app/main/default/objects/Use_Case__c/fields/Hypothesis__c.field-meta.xml
<CustomField>
    <fullName>Hypothesis__c</fullName>
    <label>Hypothesis</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>