force-app/main/default/objects/Use_Case__c/fields/Presales__c.field-meta.xml
<CustomField>
    <fullName>Presales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presale?</label>
    <type>Checkbox</type>
</CustomField>