force-app/main/default/objects/Use_Case__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Classification</fullName>
            </value>
            <value>
                <fullName>Bank Reconciliation</fullName>
            </value>
            <value>
                <fullName>Bank vs Accounting</fullName>
            </value>
            <value>
                <fullName>Cost Control</fullName>
            </value>
            <value>
                <fullName>Debt Control Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Dispersals</fullName>
            </value>
            <value>
                <fullName>ERP vs OS</fullName>
            </value>
            <value>
                <fullName>EUCs</fullName>
            </value>
            <value>
                <fullName>Multiple Payment Methods</fullName>
            </value>
            <value>
                <fullName>Network Acquirer Reconciliation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Transaction Cost Control</fullName>
            </value>
            <value>
                <fullName>ACH/Wires</fullName>
                <isActive>false</isActive>
                <label>ACH/Wires</label>
            </value>
            <value>
                <fullName>APM</fullName>
                <isActive>false</isActive>
                <label>APM</label>
            </value>
            <value>
                <fullName>ATMs</fullName>
                <isActive>false</isActive>
                <label>ATMs</label>
            </value>
            <value>
                <fullName>Accounting Translator</fullName>
                <isActive>false</isActive>
                <label>Accounting Translator</label>
            </value>
            <value>
                <fullName>B2B</fullName>
                <isActive>false</isActive>
                <label>B2B</label>
            </value>
            <value>
                <fullName>Card Closed Loops</fullName>
                <isActive>false</isActive>
                <label>Card Closed Loops</label>
            </value>
            <value>
                <fullName>Cash</fullName>
                <isActive>false</isActive>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Cash Network</fullName>
                <isActive>false</isActive>
                <label>Cash Network</label>
            </value>
            <value>
                <fullName>Cash Networks</fullName>
                <isActive>false</isActive>
                <label>Cash Networks</label>
            </value>
            <value>
                <fullName>Chargebacks</fullName>
                <isActive>false</isActive>
                <label>Chargebacks</label>
            </value>
            <value>
                <fullName>Consignment</fullName>
                <isActive>false</isActive>
                <label>Consignment</label>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
                <isActive>false</isActive>
                <label>Credit Cards</label>
            </value>
            <value>
                <fullName>Deliveries</fullName>
                <isActive>false</isActive>
                <label>Deliveries</label>
            </value>
            <value>
                <fullName>ERP vs Banks</fullName>
                <isActive>false</isActive>
                <label>ERP vs Banks</label>
            </value>
            <value>
                <fullName>ERP vs Invoices</fullName>
                <isActive>false</isActive>
                <label>ERP vs Invoices</label>
            </value>
            <value>
                <fullName>EUC Automation</fullName>
                <isActive>false</isActive>
                <label>EUC Automation</label>
            </value>
            <value>
                <fullName>Gateway/PSP</fullName>
                <isActive>false</isActive>
                <label>Gateway/PSP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>