force-app/main/default/objects/Use_Case__c/fields/Viability__c.field-meta.xml
<CustomField>
    <fullName>Viability__c</fullName>
    <label>Viability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>